# ETL-course

./: .gitignore  main.py  pyproject.toml
2_class/: README-2.md  docker-compose.yml
2_class/workbooks/: workbook-3-2-etl-notebook.ipynb
